--- a/client/src/styles.module.css
+++ b/client/src/styles.module.css
@@ -9,8 +9,9 @@
   }
   .deck {
     position: absolute;
-    width: 300px;
-    height: 200px;
+    margin: 1em;
+    width: 500px;
+    height: 300px;
     will-change: transform;
     display: flex;
     align-items: center;
@@ -19,12 +20,12 @@
   }
   
   .deck > div {
-    background-color: white;
+    background-color: black;
     background-size: auto 85%;
     background-repeat: no-repeat;
     background-position: center center;
-    width: 45vh;
-    max-width: 150px;
+    width: 50vh;
+    max-width: 200px;
     height: 85vh;
     max-height: 285px;
     will-change: transform;
